# VantaCam

./: .gitignore  Implementation.md  Plan.md  Problems list.md  README.md  Review.md  build.gradle.kts  changelog.md  gradle.properties  package-lock.json  package.json  processing-problems.md  project-structure.md  settings.gradle.kts  skills-lock.json  split_modules.sh  split_modules2.sh
.Jules/: palette.md
.agents/skills/: Backend Enhancer.md
Knowledge/: Advance HDR algorithm research.md  advance imaging system research.md
Model/AWB/: awb_final.onnx  awb_final_full_integer_quant.tflite
Model/MicroISP/: MicroISP_V4_fp16.tflite
ai-engine/api/: build.gradle.kts
ai-engine/impl/: build.gradle.kts
android/: key.properties  release-key.jks
app/: build.gradle.kts  proguard-rules.pro
bokeh-engine/api/: build.gradle.kts
bokeh-engine/impl/: build.gradle.kts
build-logic/convention/: build.gradle.kts
camera-core/api/: build.gradle.kts
camera-core/impl/: build.gradle.kts
color-science/api/: build.gradle.kts
color-science/impl/: build.gradle.kts
common/: build.gradle.kts
common-test/: build.gradle.kts
config/detekt/: detekt.yml
core/capture-orchestrator/: build.gradle.kts
core/color-science/: tone_curve_demo.py
core/lens-model/: build.gradle.kts
depth-engine/api/: build.gradle.kts
depth-engine/impl/: build.gradle.kts
docs/: Color Science Processing.md  ndk-core-rearchitecture.md  phase0-architecture.md
docs/adr/: ADR-001-16bit-photon-buffer.md  ADR-002-api-impl-split.md  ADR-003-lumo-parallel-pipeline.md  ADR-004-vulkan-compute.md  ADR-005-partitioned-ct-sensing.md  ADR-006-separate-engines.md
docs/color-science/: Plan-CS.md
docs/known-issues/: README.md  build.md  di.md  processing.md  sdk.md  wiring.md
engines/neural-isp/: build.gradle.kts
face-engine/api/: build.gradle.kts
face-engine/impl/: build.gradle.kts
feature/camera/: build.gradle.kts
feature/gallery/: build.gradle.kts
feature/settings/: build.gradle.kts
features/camera/: build.gradle.kts
features/gallery/: build.gradle.kts
features/settings/: build.gradle.kts
gpu-compute/: build.gradle.kts
gradle/: libs.versions.toml
hardware-contracts/: build.gradle.kts
hardware-contracts/api/: hardware-contracts.api
hypertone-wb/api/: build.gradle.kts
hypertone-wb/impl/: build.gradle.kts
lens-model/: build.gradle.kts
lib/: download-providers.js
photon-matrix/: build.gradle.kts
platform-android/native-imaging-core/impl/src/main/cpp/: CMakeLists.txt  photon_buffer.h
platform-android/native-imaging-core/impl/src/main/cpp/proxdr/include/: ProXDR_Engine.h
platform-android/native-imaging-core/impl/src/main/cpp/proxdr/jni/: proxdr_jni.cpp
platform-android/native-imaging-core/impl/src/main/cpp/proxdr/src/: adaptive_scene.cpp  color_lm.cpp  dcg_hdr.cpp  fusion_lm.cpp  gain_map.cpp  highlight_recovery.cpp  neural_hooks.cpp  pipeline.cpp  scene_analyzer.cpp  tone_lm.cpp  wavelet_nr.cpp
scripts/: base64-scan.sh  build-sub-pages.js  bump-version.mjs  check-skill-references.mjs  docs-prompt-injection-scan.sh  generate-changelog.mjs  pr-risk-check.mjs  require-tests.sh  rtk-benchmark.mjs  secret-scan.sh  update-changelog.mjs
scripts/lib/: utils.js
sensor-hal/: build.gradle.kts
server/: index.js
src/: detect-antipatterns.mjs
tests/: README.md  detect-antipatterns.test.js  skills-cli.test.js
ui-components/: build.gradle.kts
(+446 files in other folders)
